--- a/cowork_config.json
+++ b/cowork_config.json
@@ -16,6 +16,7 @@
     "theme_mode": "bright",
     "enable_tooltips": true,
     "floating_speed": 0.2,
-    "enable_floating_animation": true
+    "enable_floating_animation": true,
+    "zoom_mode": "map"
   }
 }
