--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@ __pycache__/
 *.pyd
 .Python
 *.so
+*.pyc.*
 
-# Assets that cause conflicts
+# Assets that cause conflicts (generated at runtime)
 assets/glass_panel.png
 assets/nebula_soft.png
+assets/*.png
 
 # IDE Files
 .vscode/
