✨ Projekt-Einstellungen in Task-Ansicht + Prioritäts-System
🎯 Neue Features:
• 📝 Projekt-Einstellungen Button in Task-Ansicht
• 🎨 Bearbeitung von Name, Farbe, Deadline
• 📊 Prioritäts-System (5 Stufen basierend auf Deadlines)
• 🎯 Prioritäts-basierte Positionierung (Stufe 5 = Mitte)
• 🔄 Dynamische Titel-Updates

🔧 Technische Verbesserungen:
• Prioritäts-Berechnung basierend auf Deadline-Nähe
• Projekt-Positionierung nach Priorität
• Robuste Dialog-Initialisierung mit Verzögerung
• Vollständige Integration in bestehende UI

--- a/cowork_config.json
+++ b/cowork_config.json
@@ -17,6 +17,6 @@
     "enable_tooltips": true,
     "floating_speed": 0.2,
     "enable_floating_animation": true,
-    "zoom_mode": "map"
+    "zoom_mode": "dynamic"
   }
 }
