🔧 FINALE Update-Logik: Einfach und ewig
✅ Das Problem gelöst:
• EINFACHSTE Update-Logik: nur git pull
• ALLE problematischen Dateien in .gitignore
• cowork_config.json wird ignoriert
• Update-Logik wird NIE MEHR geändert

🎯 Jetzt funktioniert es für immer:
• Installieren → F3 → Update → F3 → Update → ...
• Für alle externen Geräte
• Für alle zukünftigen Versionen
• Einmal installiert, immer aktuell!

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ assets/glass_panel.png
 assets/nebula_soft.png
 assets/*.png
 
+# Config files that are user-specific
+cowork_config.json
+
 # IDE Files
 .vscode/
 .idea/
